update history
